[gd_scene load_steps=7 format=2]

[ext_resource path="res://tutorial_assets/UI/PNG/grey_button12.png" type="Texture" id=1]
[ext_resource path="res://tutorial_assets/UI/PNG/red_cross.png" type="Texture" id=2]
[ext_resource path="res://tutorial_assets/UI/PNG/grey_arrowUpWhite.png" type="Texture" id=3]
[ext_resource path="res://src/assets/resources/narrow_40_outline1.tres" type="DynamicFont" id=4]
[ext_resource path="res://tutorial_assets/UI/PNG/blue_button12.png" type="Texture" id=5]
[ext_resource path="res://src/scenes/SelectButtons.gd" type="Script" id=6]


[node name="ButtonContainer" type="Control"]
pause_mode = 2
script = ExtResource( 6 )

[node name="Upgrade" type="TextureButton" parent="."]
margin_left = 53.0
margin_top = -36.0
margin_right = 133.0
margin_bottom = 44.0
rect_min_size = Vector2( 80, 80 )
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 1 )
expand = true

[node name="Sprite" type="Sprite" parent="Upgrade"]
position = Vector2( 41, 40 )
scale = Vector2( 3.6, 4.8 )
texture = ExtResource( 3 )

[node name="CostValue" type="RichTextLabel" parent="Upgrade"]
margin_left = 90.0
margin_top = 20.0
margin_right = 257.0
margin_bottom = 70.0
custom_fonts/normal_font = ExtResource( 4 )
text = "$100"

[node name="Sell" type="TextureButton" parent="."]
margin_left = -37.0
margin_top = -36.0
margin_right = 43.0
margin_bottom = 44.0
rect_min_size = Vector2( 80, 80 )
rect_scale = Vector2( 0.6, 0.6 )
action_mode = 0
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Sell"]
position = Vector2( 40, 40 )
scale = Vector2( 3.5037, 3.42593 )
texture = ExtResource( 2 )

[node name="SellValue" type="RichTextLabel" parent="Sell"]
margin_left = -133.0
margin_top = 20.0
margin_right = 8.0
margin_bottom = 70.0
custom_fonts/normal_font = ExtResource( 4 )
text = "$100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxTarget" type="HBoxContainer" parent="."]
margin_left = -42.0
margin_top = 61.0
margin_right = 69.0
margin_bottom = 81.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxTarget"]
margin_top = 2.0
margin_right = 50.0
margin_bottom = 17.0
rect_min_size = Vector2( 50, 0 )
rect_clip_content = false
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Target"
fit_content_height = true
scroll_active = false

[node name="Panel" type="Panel" parent="HBoxTarget/RichTextLabel"]
show_behind_parent = true
margin_left = -2.0
margin_top = -2.0
margin_right = 108.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetOption" type="OptionButton" parent="HBoxTarget"]
margin_left = 54.0
margin_right = 111.0
margin_bottom = 20.0
text = "First"
items = [ "First", null, false, 0, null, "Last", null, false, 1, null, "Strong", null, false, 2, null, "Weak", null, false, 3, null, "Fast", null, false, 4, null, "Slow", null, false, 5, null, "Dropship", null, false, 6, null ]
selected = 0

[connection signal="pressed" from="Upgrade" to="." method="_on_Upgrade_pressed"]
[connection signal="pressed" from="Sell" to="." method="_on_Sell_pressed"]
[connection signal="item_selected" from="HBoxTarget/TargetOption" to="." method="_on_TargetOption_item_selected"]
